feat: add user-agent setting and proxy usage

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,6 +8,10 @@
  <input name="domain" class="form-control" value="{{domain}}">
 </div>
 <div class="mb-3">
+ <label>User-Agent</label>
+ <input name="user_agent" class="form-control" value="{{user_agent}}">
+</div>
+<div class="mb-3">
  <label>Новый пароль администратора</label>
  <input type="password" name="password" class="form-control">
 </div>
