style: expand API account rows

--- a/templates/api_accounts.html
+++ b/templates/api_accounts.html
@@ -3,11 +3,18 @@
 {% block content %}
 <h2>Аккаунты API</h2>
 <table class="table">
-<tr><th>Логин</th><th>Имя</th><th>Фамилия</th><th>UUID</th></tr>
+<tr><th>Логин</th><th>Имя</th><th>Фамилия</th><th>UUID</th><th>Отправлено</th></tr>
 {% for a in accounts %}
-<tr><td>{{a.login}}</td><td>{{a.first_name}}</td><td>{{a.last_name}}</td><td>{{a.uuid}}</td></tr>
+<tr>
+  <td>{{a.login}}</td>
+  <td>{{a.first_name}}</td>
+  <td>{{a.last_name}}</td>
+  <td>{{a.uuid}}</td>
+  <td>{{a.send_count}}</td>
+</tr>
 {% endfor %}
 </table>
+<a class="btn btn-secondary mb-3" href="{{ url_for('reset_counts') }}">Скинуть счетчики отправок</a>
 <h3>Загрузка</h3>
 <form method="post" enctype="multipart/form-data">
 <div class="mb-3">
