--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <li class="nav-item"><a class="nav-link" href="{{ url_for('email_base') }}">База e-mail</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('macros') }}">Макросы</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('attachments') }}">Аттачи</a></li>
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('api_rules') }}">API правила</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('proxies') }}">Прокси</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('api_accounts') }}">Аккаунты API</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('settings') }}">Настройки</a></li>
