--- a/templates/attachments.html
+++ b/templates/attachments.html
@@ -33,6 +33,10 @@
  <input class="form-check-input" type="checkbox" name="inline" id="inline">
  <label class="form-check-label" for="inline">Использовать внутри письма (для изображений)</label>
 </div>
+<div class="form-check mb-3">
+ <input class="form-check-input" type="checkbox" name="upload_to_server" id="upload_to_server" checked>
+ <label class="form-check-label" for="upload_to_server">Загружать на сервер</label>
+</div>
 <button class="btn btn-primary">Загрузить</button>
 </form>
 {% endblock %}
