feat: add macro preview and inline snippets

--- a/templates/attachments.html
+++ b/templates/attachments.html
@@ -12,9 +12,12 @@
    {% if a.macro_base64 %}base64: {{'{{$'+a.macro_base64+'}}'}} {% endif %}
    {% if a.macro_url %}url: {{'{{$'+a.macro_url+'}}'}} {% endif %}
    {% if a.macro_id %}id: {{'{{$'+a.macro_id+'}}'}}{% endif %}
+   {% if a.inline and a.macro_base64 %}
+   <br><small>пример: &lt;img src="data:image/{{a.filename.split('.')[-1].lower()}};base64,{{'{{$'+a.macro_base64+'}}'}}"></small>
+   {% endif %}
    {% if a.remote_url %}<br><small>uploaded url: {{a.remote_url}}</small>{% endif %}
    {% if a.remote_id %}<br><small>uploaded id: {{a.remote_id}}</small>{% endif %}
- </td>
+  </td>
  <td>
    <a class="btn btn-sm btn-danger" href="{{ url_for('delete_attachment', att_id=a.id) }}" onclick="return confirm('Удалить?');">Удалить</a>
  </td>
