feat: add thread setting and setup docs

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,6 +12,10 @@
  <input name="user_agent" class="form-control" value="{{user_agent}}">
 </div>
 <div class="mb-3">
+ <label>Количество потоков</label>
+ <input name="threads" class="form-control" value="{{threads}}">
+</div>
+<div class="mb-3">
  <label>Новый пароль администратора</label>
  <input type="password" name="password" class="form-control">
 </div>
