feat: add threaded sending

--- a/templates/letter.html
+++ b/templates/letter.html
@@ -28,6 +28,7 @@
       </div><br>
     {% endfor %}
   </div>
-  <button class="btn btn-primary">Отправить</button>
+  <button class="btn btn-primary" name="action" value="start">Старт</button>
+  <button class="btn btn-danger" name="action" value="stop">Стоп</button>
 </form>
 {% endblock %}
