--- a/templates/macros.html
+++ b/templates/macros.html
@@ -69,6 +69,11 @@
     <input class="form-check-input" type="checkbox" name="as_html" id="as_html">
     <label class="form-check-label" for="as_html">Формировать HTML</label>
   </div>
+  <label>Размер HTML (КБ, от - до)</label>
+  <div class="input-group mb-2">
+    <input name="html_min_kb" class="form-control">
+    <input name="html_max_kb" class="form-control">
+  </div>
   <label>Дополнительный текст для HTML</label>
   <textarea name="html_extra" class="form-control"></textarea>
 </div>
