--- a/templates/proxies.html
+++ b/templates/proxies.html
@@ -2,6 +2,7 @@
 {% block title %}Прокси{% endblock %}
 {% block content %}
 <h2>Прокси</h2>
+<a class="btn btn-secondary mb-2" href="{{ url_for('reset_proxies') }}">Сбросить метки</a>
 <table class="table"><tr><th>Адрес</th><th>Используется</th><th>Действия</th></tr>
 {% for p in proxies %}
 <tr>
